fix typo, update case 2022-00021 timeline

--- a/csirt.divd.nl/_cases/DIVD-2022-00021.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00021.md
@@ -39,6 +39,12 @@ timeline:
 - start: 2022-03-26
   end:
   event: First version of this case file online 
+- start: 2022-06-08
+  end:
+  event: Rescan and scan, more notifications sent out
+- start: 2022-06-08
+  end:
+  event: Data concerning the Netherlands shared with the Digital Trust Center and the Dutch Security Clearing House (Security Meldpunt)
 
 ---
 ## Summary
