--- a/csirt.divd.nl/_cases/DIVD-2022-00033.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00033.md
@@ -46,7 +46,7 @@ timeline:
   event: "Notifications being sent to about 15k vulnerable instances"
 - start: 2022-06-06
   end:
-  event: "Data concerning the etherlands shared with the Digital Trust Center and the Dutch Security Clearing House (Security Meldpunt)" 
+  event: "Data concerning the Netherlands shared with the Digital Trust Center and the Dutch Security Clearing House (Security Meldpunt)" 
 - start: 2022-06-06
   end:
   event: "Approximately 1150 vulnerable instances identified and vulnerable owners were sent notifications"
