update QNAP casefile

--- a/csirt.divd.nl/_cases/DIVD-2022-00030.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00030.md
@@ -27,6 +27,16 @@ timeline:
 - start: 2022-05-24
   end:
   event: First round of notifications sent to about 10000 hosts
+- start: 2022-05-24
+  end:
+  event: Data concerning the Netherlands shared with the Digital Trust Center and the Dutch Security Clearing House (Security Meldpunt)
+- start: 2022-06-10
+  end:
+  event: In the second scan we sent over 15000 notifications concerning vulnerable hosts
+- start: 2022-06-10
+  end:
+  event: Data concerning the Netherlands shared with the Digital Trust Center and the Dutch Security Clearing House (Security Meldpunt) again
+
 ---
 
 
