--- a/csirt.divd.nl/_cases/DIVD-2022-00027.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00027.md
@@ -33,6 +33,12 @@ timeline:
 - start: 2022-05-15
   end:
   event: Notified another 130 vulnerable hosts
+- start: 2022-06-10
+  end:
+  event: Rescan, notifications sent out for the remaining vulnerable hosts
+- start: 2022-06-10
+  end:
+  event: Shared the data concerning the Netherlands with the Digital Trust Center and the Dutch Security Clearing House (Security Meldpunt)
 
 ---
 
