Update the text a bit. format versions

--- a/csirt.divd.nl/_cases/DIVD-2022-00033.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00033.md
@@ -59,17 +59,19 @@ ips: 0
 ---
 ## Summary
 
-On 2 June 2022, Volexity published a (report about an exploitation of Confluence)[https://www.volexity.com/blog/2022/06/02/zero-day-exploitation-of-atlassian-confluence/]. Volexity has been in contact with Atlassian who released [a formal advisory](https://confluence.atlassian.com/doc/confluence-security-advisory-2022-06-02-1130377146.html).
+On 2 June 2022, Volexity published a [report about an exploitation of Confluence][https://www.volexity.com/blog/2022/06/02/zero-day-exploitation-of-atlassian-confluence/]. 
+Volexity has been in contact with Atlassian who released a formal advisory.
 
 What we know so far:
 * Affected products are Confluence Server and Confluence Datacenter (both on-premise products)
-* The vulnerability was found in version 7.18.0
-* Versions >= 7.4.0 have been confirmed to be vulnerable too
-* Other versions may be vulnerable
+* All versions released after 1.3.5 have been confirmed to be vulnerable too
 * The vulnerability is an unauthenticated Remote Code Execution
+* The proof of concept for exploitation is publicly available
+* Patches are available
 
-## Update 03/06/2022
-Atlassian has released a patch, see [their security advisory](https://confluence.atlassian.com/doc/confluence-security-advisory-2022-06-02-1130377146.html) for details. Patched versions are:
+Atlassian has released a patch, see [their security advisory](https://confluence.atlassian.com/doc/confluence-security-advisory-2022-06-02-1130377146.html) for details.
+Patched versions are:
+```
 - 7.4.17
 - 7.13.7
 - 7.14.3
@@ -77,12 +79,13 @@ Atlassian has released a patch, see [their security advisory](https://confluence
 - 7.16.4
 - 7.17.4
 - 7.18.1
+```
 
 ## What you can do
 
 Apply the patch released by Atlassian.
 
-If patching is not an option, you can follow the advice underneath to mitigate risk.
+If patching is not an option, you can follow the advice underneath to mitigate risks.
 
 If you are using Confluence Server or Data Center it is recommended that you either:
 * Severely restrict access, or
@@ -92,7 +95,7 @@ If that is unfeasible, a WAF that blocks requests containing `${` may provide ad
 
 ## What we are doing
 
-We are currently working to identify Confluence instances that are accessible from the internet and warn owners.
+We are currently working to identify unpatched Confluence instances that are accessible from the internet and warn owners.
 
 We will be sharing the Dutch part of the data with the [Dutch Digital Trust Center](https://www.digitaltrustcenter.nl/dreigingsinformatie-ontvangen) who will inform affected Dutch companies
 
@@ -102,5 +105,5 @@ We will be sharing the Dutch part of the data with the [Dutch Digital Trust Cent
 
 ## More information
 
-* [Volexity report about exploit of Confluence](https://www.volexity.com/blog/2022/06/02/zero-day-exploitation-of-atlassian-confluence/).
+* [Volexity reports of unknown exploit in Confluence](https://www.volexity.com/blog/2022/06/02/zero-day-exploitation-of-atlassian-confluence/).
 * [Official Altlassian advisory](https://confluence.atlassian.com/doc/confluence-security-advisory-2022-06-02-1130377146.html).
