--- a/csirt.divd.nl/_cases/DIVD-2022-00033.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00033.md
@@ -59,7 +59,7 @@ ips: 0
 ---
 ## Summary
 
-On 2 June 2022, Volexity published a [report about an exploitation of Confluence][https://www.volexity.com/blog/2022/06/02/zero-day-exploitation-of-atlassian-confluence/]. 
+On 2 June 2022, Volexity published a [report about an exploitation of Confluence](https://www.volexity.com/blog/2022/06/02/zero-day-exploitation-of-atlassian-confluence/). 
 Volexity has been in contact with Atlassian who released a formal advisory.
 
 What we know so far:
