--- a/csirt.divd.nl/404.md
+++ b/csirt.divd.nl/404.md
@@ -6,6 +6,6 @@ permalink: /404.html
 ---
 # 404 - Page not found
 
-Oops, in true hacker style you ended up on a non-existing page. Pick something from the menu to go to a pgae that does exists please...
+Oops, in true hacker style you ended up on a non-existing page. Pick something from the menu to go to a page that does exists please...
 
 ![broken DIVD logo](/assets/images/404divd.svg "Broken DIVD logo")
