add numbers, update events and description

--- a/csirt.divd.nl/_cases/DIVD-2022-00033.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00033.md
@@ -54,7 +54,13 @@ timeline:
 - start: 2022-06-07
   end: 
   event: "Approximately 800+ vulnerable instances identified and vulnerable owners were sent notifications"
-ips: 0
+- start: 2022-06-08
+  end:
+  event: "All other data concerning the Netherlands shared with the Digital Trust Center and the Dutch Security Clearing House (Security Meldpunt)"
+- start: 2022-06-16
+  end: 
+  event: "Rescanning with a non-intrusive command execution for visibility on the decreasing number of vulnerable instances"
+ips: 18469
 # You can set IPs to n/a when this case isn't about IPs (e.g. stolen credentials)
 ---
 ## Summary
@@ -95,7 +101,10 @@ If that is unfeasible, a WAF that blocks requests containing `${` may provide ad
 
 ## What we are doing
 
+We started scanning before the exploit was publicly available, by matching the version numbers of the identified instances.
 We are currently working to identify unpatched Confluence instances that are accessible from the internet and warn owners.
+
+as of June 16, we started scanning with a non-intrusive command execution.
 
 We will be sharing the Dutch part of the data with the [Dutch Digital Trust Center](https://www.digitaltrustcenter.nl/dreigingsinformatie-ontvangen) who will inform affected Dutch companies
 
