Turn reports into a layout style

--- a/reports/2022-00006 - SAProuter.md
+++ b/reports/2022-00006 - SAProuter.md
@@ -1,17 +1,16 @@
 ---
+layout: report
 title: Report DIVD-2022-00006 - SAProuter
 date: 15 February, 2022
 author: Joris van de Vis
-excerpt: the DIVD scanned for vulnerable SAProuters.
+lead: Joris van de Vis
+csirt:
+    - Victor Pasman
+researchers:
+    - Victor Pasman
+    - Joris van der Vis
+excerpt: The DIVD scanned for vulnerable SAProuters and warned the network owners
 ---
-<header>
-    <h2>REPORT DIVD-2022-00006 - SAProuter</h2>
-    <span>15 February 2022 by Joris van de Vis</span>
-</header>
-
-Case lead: Joris van de Vis<br>
-CSIRT: Victor Pasman<br>
-Researchers: Victor Pasman / Joris van de Vis
 
 SAProuters are software-defined routers that route traffic from and to SAP systems. A typical use-case is for SAP support to access your internal SAP systems from SAP HQ for remote support. The SAProuter routes traffic e.g., from the internet to internal resources (SAP systems). When not correctly secured, anyone from the internet can access internal resources. This, in turn, might lead to the exploitation of internal SAP resources that would otherwise not be possible in a direct manner.
 
