--- a/reports/2022-00006 - SAProuter.md
+++ b/reports/2022-00006 - SAProuter.md
@@ -8,7 +8,7 @@ csirt:
     - Victor Pasman
 researchers:
     - Victor Pasman
-    - Joris van der Vis
+    - Joris van de Vis
 excerpt: The DIVD scanned for vulnerable SAProuters and warned the network owners
 ---
 
