--- a/_cases/DIVD-2022-00032.md
+++ b/_cases/DIVD-2022-00032.md
@@ -32,6 +32,9 @@ timeline:
 - start: 2022-06-06
   end:
   event: "First round of notifications sent"
+- start: 2022-06-21
+  end:
+  event: "Second round of notifications sent"
 
 ips: 0
 # You can set IPs to n/a when this case isn't about IPs (e.g. stolen credentials)
