--- a/_cases/DIVD-2022-00025.md
+++ b/_cases/DIVD-2022-00025.md
@@ -36,6 +36,9 @@ timeline:
 - start: 2022-05-15
   end: 
   event: Second batch of notifications sent
+- start: 2022-06-24
+  end:
+  event: Third batch of notifications sent
 
 ---
 ## Summary
