--- a/_cases/DIVD-2022-00038.md
+++ b/_cases/DIVD-2022-00038.md
@@ -29,7 +29,7 @@ ips: 295
 
 ## Summary
 
-In January '22 Oracle announced a critical patch update to mitigate multiple security vulnerabilities for their WebLogic Servers. DIVD started notifying owners of IP addresses where instances vulnerable to CVE-2022-21371 were found. A patch is available to mitigate this issue. Recipients of this email are advised to immediately update their Oracle WebLogin instance.
+In January '22 Oracle announced a critical patch update to mitigate multiple security vulnerabilities for their WebLogic Servers. DIVD started notifying owners of IP addresses where instances vulnerable to CVE-2022-21371 were found. A patch is available to mitigate this issue. Recipients of this email are advised to immediately update their Oracle WebLogic instance.
 
 ## Impact
 
