Changed Case Lead to Victor Pasman

--- a/_cases/DIVD-2022-00038.md
+++ b/_cases/DIVD-2022-00038.md
@@ -4,7 +4,7 @@ title: "DIVD-2022-00038 - Vulnerable Oracle WebLogic Server"
 divd: DIVD-2022-00038
 excerpt: "Patch vulnerable Oracle WebLogic Servers immediately as some versions are vulnerable for an Local File Inclusion Attack, which causes secrets and sourcecode to be readable by malicious attackers. DIVD is actively notifying owners of vulnerable systems"
 author: Tom Wolters
-lead: Tom Wolters
+lead: Victor Pasman
 status: Open
 researchers:
 - Tom Wolters
