--- a/_cases/DIVD-2022-00033.md
+++ b/_cases/DIVD-2022-00033.md
@@ -50,10 +50,10 @@ timeline:
   event: "Data concerning the Netherlands shared with the Digital Trust Center and the Dutch Security Clearing House (Security Meldpunt)" 
 - start: 2022-06-06
   end:
-  event: "Approximately 1150 vulnerable instances identified and vulnerable owners were sent notifications"
+  event: "Approximately 1150 additional vulnerable instances identified and vulnerable owners were sent notifications"
 - start: 2022-06-07
   end: 
-  event: "Approximately 800+ vulnerable instances identified and vulnerable owners were sent notifications"
+  event: "Approximately 800+ additional vulnerable instances identified and vulnerable owners were sent notifications"
 - start: 2022-06-08
   end:
   event: "All other data concerning the Netherlands shared with the Digital Trust Center and the Dutch Security Clearing House (Security Meldpunt)"
