--- a/_cases/DIVD-2022-00009.md
+++ b/_cases/DIVD-2022-00009.md
@@ -98,7 +98,7 @@ In the second half of April 2021 SolarMan gets notified and changes the password
 
 On 4 Feb Jelle joins DIVD and on 6 feb we opened this case.
 
-Getting the account closed turns out to be hard. The first time the vendor responded promptly, but silently. In fact neither we nor the NSCS even got any reply from them. NCSC used the diplomatic channels via the Dutch embassy and head of research Victor Gevers, visited the Chineese embassy in The Hague, all to escalate this issue. In the end the password has been changed and the repository deleted.
+Getting the account closed turns out to be hard. The first time the vendor responded promptly, but silently. In fact neither we nor the NSCS even got any reply from them. NCSC used the diplomatic channels via the Dutch embassy and head of research Victor Gevers, visited the Chineese embassy in The Hague, all to escalate this issue. In the end the password has been changed and the repository deleted. Just before this Cert China confirmed receipt of the report to NCSC.
 
 The netto effect of deleting the repository and resetting the password, is that the number of parties that the ability to abuse this access has been reduced from "everybody that was able to find the password" to the vendor and whomever can control the vendor.
 
