HTML proofing got more strict, compensating

--- a/_cases/DIVD-2020-00001.md
+++ b/_cases/DIVD-2020-00001.md
@@ -120,7 +120,7 @@ Het aantal ongemitigeerde systemen neem gelukkig af.
  
 <hr>
 
-### <a name="english"></a>English
+### <a href="#" name="english"></a>English
 <hr>
 
 ### Update 9-3-2020 21:12
