--- a/_cases/DIVD-2020-00012.md
+++ b/_cases/DIVD-2020-00012.md
@@ -53,7 +53,7 @@ ips: 49000
 Op 19 November is door een threat intelligence analyst een lijst met 49,577 kwetsbare Fortinet VPN devices aangetroffen. Het gaat hier om Fortinet devices die kwetsbaar zijn voor CVE-2018-13379, via deze kwetsbaarheid kan een aanvaller via een aangepast HTTP request systeem bestanden opvragen waartoe hij normaal gesproken geen toegang zou moeten hebben. Door het bestand sslvpn_websession op te vragen, is het mogelijk om de inlogggegeven van gebruikers te stelen.
 
 ## Wat kunt u doen?
-Als u gebruik maak van Fortinet VPN of FIrewall devices, controleer dan de versienummer om te zien om deze kwetsbaar zijn. Zie hiervoor het [FortiGuard PSIRT Advisory](http://www.fortiguard.com/psirt/FG-IR-18-384).
+Als u gebruik maak van Fortinet VPN of FIrewall devices, controleer dan de versienummer om te zien om deze kwetsbaar zijn. Zie hiervoor het [FortiGuard PSIRT Advisory](https://www.fortiguard.com/psirt/FG-IR-18-384).
 Indien uw Fortinet device kwetsbaar is, herstel dan de kwetsbaarheid en ga ervan uit dat de gebruikersnamen en wachtwoorden van uw gebruiker gelekt zijn.
 De kwetsbaarheid kan verholpen worden door te upgraden naar een niet kwetsbare versie. Voor de eindegebruikers raden we u aan minimaal hun wachtwoorden te resetten. 
 
@@ -76,7 +76,7 @@ Onderzoekers van het DIVD verwerken de gelekte lijst en verifiëren of de op de 
 
 ## Meer informatie
 * [Bleeping Computer 22-11-2020](https://www.bleepingcomputer.com/news/security/hacker-posts-exploits-for-over-49-000-vulnerable-fortinet-vpns/)
-* [FortiGuard PSIRT Advisory](http://www.fortiguard.com/psirt/FG-IR-18-384)
+* [FortiGuard PSIRT Advisory](https://www.fortiguard.com/psirt/FG-IR-18-384)
 
 <hr>
 
@@ -86,7 +86,7 @@ Onderzoekers van het DIVD verwerken de gelekte lijst en verifiëren of de op de 
 On November 19th a threat intelligence analyst found a list with 49,577 vulnerable Fortinet VPN devices online. These devices are vulnerable to CVE-2018-13379, through this vulnerability an attacker can gain access to system files via crafted HTTP requests. Specificaly the system file sslvpn_websession can be acccess and used to retrieve user login credentials.
 
 ## What you can do
-If your system is vulnerable we advice to upgrade, and to reset the passwords for all VPN users. See [FortiGuard PSIRT Advisory](http://www.fortiguard.com/psirt/FG-IR-18-384) for more information.
+If your system is vulnerable we advice to upgrade, and to reset the passwords for all VPN users. See [FortiGuard PSIRT Advisory](https://www.fortiguard.com/psirt/FG-IR-18-384) for more information.
 
 ## What we are doing
 DIVD researchers are processing the list of vulnerable systems to verify if they are indeed vulnerable. If they are we will notify the administrators of these systems.
@@ -96,4 +96,4 @@ DIVD researchers are processing the list of vulnerable systems to verify if they
 
 ## More information
 * [Bleeping Computer 22-11-2020](https://www.bleepingcomputer.com/news/security/hacker-posts-exploits-for-over-49-000-vulnerable-fortinet-vpns/)
-* [FortiGuard PSIRT Advisory](http://www.fortiguard.com/psirt/FG-IR-18-384)
+* [FortiGuard PSIRT Advisory](https://www.fortiguard.com/psirt/FG-IR-18-384)
