--- a/_posts/20-01-13-Citrix.md
+++ b/_posts/20-01-13-Citrix.md
@@ -35,7 +35,7 @@ Vanochtend ca 11:00 waren er bij het Security Meldpunt 546 via het publieke inte
 
 <hr>
 
-### <a name="english"></a>English
+### <a href="#" name="english"></a>English
 
 The problem
 ===========
