--- a/_cases/DIVD-2022-00009.md
+++ b/_cases/DIVD-2022-00009.md
@@ -50,6 +50,8 @@ timeline:
   event: DIVD involves the Dutch National Cyber Security Center (NCSC)
 - start: 2022-02-20
   event: NCSC notifies vendor and Cert.cn
+- start: 2022-04-15
+  event: NCSC notifies Cert.cn
 - start: 2022-05-10
   event: NCSC involves the Dutch ambassy in China.  
 - start: 2022-06-09
@@ -98,7 +100,7 @@ In the second half of April 2021 SolarMan gets notified and changes the password
 
 On 4 Feb Jelle joins DIVD and on 6 feb we opened this case.
 
-Getting the account closed turns out to be hard. The first time the vendor responded promptly, but silently. In fact neither we nor the NSCS even got any reply from them. NCSC used the diplomatic channels via the Dutch embassy and head of research Victor Gevers, visited the Chineese embassy in The Hague, all to escalate this issue. In the end the password has been changed and the repository deleted. Just before this Cert China confirmed receipt of the report to NCSC.
+Getting the account closed turns out to be hard. The first time the vendor responded promptly, but silently. In fact neither we nor the NSCS even got any reply from them. NCSC used the help of the Dutch Embassy in CHina and head of research Victor Gevers visited the Chineese Embassy in The Hague, all in an effort to het into contact. In the end the password has been changed and the repository deleted. Just before this Cert China confirmed receipt of the report to NCSC.
 
 The netto effect of deleting the repository and resetting the password, is that the number of parties that the ability to abuse this access has been reduced from "everybody that was able to find the password" to the vendor and whomever can control the vendor.
 
@@ -116,7 +118,7 @@ However, when installing smart devices please consider that:
 
 Case has been closed, no further action. 
 
-We will be presenting the details of this case [at the MCH 2022, hack camp](https://program.mch2022.org/)
+We will be presenting the details of this case [at the MCH 2022, hack camp on Sunday 24 July at 12:40](https://program.mch2022.org/mch2022/talk/FEZFET/)
 
 {% comment %}  Leave this here, so we see a timeline{% endcomment %}
 {% include timeline.html %}
