Grammer and spelling fixes

--- a/_cases/DIVD-2022-00009.md
+++ b/_cases/DIVD-2022-00009.md
@@ -1,8 +1,7 @@
 ---
 layout: case
 title: SolarMan backend administrator account/password
-excerpt: "Please set this to and except of a few lines.
-Excerpts are shown on /cases"
+excerpt: "DIVD researcher Jelle Ursem found the password of the super user of the web backend for all SolarMan / Solis / Omnik / Ginlong inverters, loggers, and batteries. The password has been changed now, and the repository containing the password has been deleted."
 author: Frank Breedijk
 lead: Frank Breedijk
 researchers:
@@ -20,7 +19,7 @@ versions:
 recommendation: Consider the risks when using these products
 patch_status: n/a
 workaround: n/a
-status : Closed
+status: Closed
 start: 2022-02-06
 end: 2022-07-02
 timeline:
@@ -30,9 +29,9 @@ timeline:
   end:   2021-04-24
   event: Password exposed and service vulnerable - 1st time
 - start: 2021-04-16
-  event: "Célistine Oosting, tweets that Omnik coverter is now uploading data to China (https://twitter.com/TheRealProcyon/status/1383154764213538816)"
+  event: "Célistine Oosting, tweets that Omnik converter is now uploading data to China (https://twitter.com/TheRealProcyon/status/1383154764213538816)"
 - start: 2021-04-17
-  event: "Jelle finds working password for SolarMan Super ADmin account in Github prepo (https://twitter.com/SchizoDuckie/status/1383365466702237703)"
+  event: "Jelle finds working password for SolarMan Super Admin account in Github repo (https://twitter.com/SchizoDuckie/status/1383365466702237703)"
 - start: 2021-04-17
   event: "Vendor informed"
 - start: 2021-04-24
@@ -49,15 +48,15 @@ timeline:
 - start: 2022-02-07
   event: DIVD involves the Dutch National Cyber Security Center (NCSC)
 - start: 2022-02-20
-  event: NCSC notifies vendor and Cert.cn
+  event: NCSC notifies vendor and Cert-CN
 - start: 2022-04-15
   event: NCSC notifies Cert.cn
 - start: 2022-05-10
-  event: NCSC involves the Dutch ambassy in China.  
+  event: NCSC involves the Dutch embassy in China.  
 - start: 2022-06-09
-  event: NCSC and China Cert in contact. Case has been given to China Cert
+  event: NCSC and China Cert in contact. The case file has been given to China Cert
 - start: 2022-06-17
-  event: DIVD contacts our office neighbour, the Chineese consulate in The Hague. We are given an (unnamed) liason at China Cert
+  event: DIVD contacts our office neighbor, the Chinese consulate in The Hague. We are given an (unnamed) liaison at China Cert
 - start: 2022-07-02
   end:   
   event: "Account is closed and GitHub repo removed"
@@ -80,11 +79,11 @@ Triggered by a [tweet from  Célistine Oosting](https://twitter.com/TheRealProcy
 
 ![Screenshot of the repo and the passwords (blurred)](/img/DIVD-2022-00009/password.png)
 
-Turns out this is indeed the Super Admin account and working password. Sincde the account doesn't have MFA Jelle was able to log in with the username and password.
+Turns out this is indeed the Super Admin account and working password. Since the account doesn't have MFA Jelle was able to log in with the username and password.
 
 ![Screenshot of Super Admin access](/img/DIVD-2022-00009/access.png)
 
-This backend and the Super Admnistrator account gives the ability to:
+This backend and the Super Administrator account give the ability to:
 * See all data from all customers including:
   - GPS coordinates
   - Current and historical production data
@@ -94,29 +93,29 @@ This backend and the Super Admnistrator account gives the ability to:
 * Uploading of firmware to devices
 * Creation and deletion of customers
 
-In the SolarMan platform there are over 1,000,000 plants (installations) with a total power over over 10GwP (actually generated). Most systems are located in China and Australia, but a significant number of 40k+ in The Netherlands.
+In the SolarMan platform, there are over 1,000,000 plants (installations) with a total power of over 10GwP (actually generated). Most systems are located in China and Australia, but a significant number of 40k+ in The Netherlands.
 
-In the second half of April 2021 SolarMan gets notified and changes the password. On 3 Feb 2022, Jelle reads [Jan van Kampen's blogpost on Growatt](https://janvankampen.nl/?p=516) and decides to check the password again. To his horror the password has been changed back to the password in the GitHub repo.
+In the second half of April 2021, SolarMan gets notified and changes the password. On 3 Feb 2022, Jelle reads [Jan van Kampen's blogpost on Growatt](https://janvankampen.nl/?p=516) and decides to check the password again. To his horror, the password has been changed back to the password in the GitHub repo.
 
-On 4 Feb Jelle joins DIVD and on 6 feb we opened this case.
+On 4 Feb Jelle joins DIVD and on 6 Feb we opened this case.
 
-Getting the account closed turns out to be hard. The first time the vendor responded promptly, but silently. In fact neither we nor the NSCS even got any reply from them. NCSC used the help of the Dutch Embassy in CHina and head of research Victor Gevers visited the Chineese Embassy in The Hague, all in an effort to het into contact. In the end the password has been changed and the repository deleted. Just before this Cert China confirmed receipt of the report to NCSC.
+Getting the account closed turned out to be hard. The first time the vendor responded promptly, but silently. In fact, neither we nor the NCSC-NL ever got any reply from them. NCSC-NL used the help of the Dutch Embassy in China and head of research Victor Gevers visited the Chinese Embassy in The Hague, all in an effort to get into contact. In the end, the password has been changed and the repository deleted. Just before this Cert China confirmed receipt of the report to NCSC-NL.
 
-The netto effect of deleting the repository and resetting the password, is that the number of parties that the ability to abuse this access has been reduced from "everybody that was able to find the password" to the vendor and whomever can control the vendor.
+The net effect of deleting the repository and resetting the password is that the number of parties with the ability to abuse this access has been reduced from "everybody that was able to find the password on GitHub" to the vendor and whoever can control the vendor.
 
 ## What you can do
 
-Not much. End users do not have any control over these event.
+Not much. End users do not have any control over these events.
 
 However, when installing smart devices please consider that:
-* You data is often uploaded to the vendor
+* Your data is often uploaded to the vendor
 * The vendor may change
 * The vendor has ultimate control over the device
-* When the vendor gets compromised, you device can be compromised as well
+* When the vendor gets compromised, your device can be compromised as well
 
 ## What we are doing
 
-Case has been closed, no further action. 
+This case has been closed. We are not taking any further action. 
 
 We will be presenting the details of this case [at the MCH 2022, hack camp on Sunday 24 July at 12:40](https://program.mch2022.org/mch2022/talk/FEZFET/)
 
@@ -129,4 +128,4 @@ We will be presenting the details of this case [at the MCH 2022, hack camp on Su
 * [Tweet in which Jelle makes his find public for the first time](https://twitter.com/SchizoDuckie/status/1383365466702237703)
 * [Now deleted GitHub repository](https://github.com/liyanyanwsy/wsy/blob/a067a21f26c5b1a9eff7c01ff02f5df3b58ae516/app/sunny/total/total.py)
 * [Jan van Kampen's blogpost on Growatt](https://janvankampen.nl/?p=516)
-* [New article about Dutch government blocking a Chineese party from the Dutch grid](https://www.nu.nl/klimaat/6208030/ministerie-greep-in-om-chinees-bedrijf-uit-nederlands-stroomnet-te-houden.html)
+* [News article about Dutch government blocking a Chinese party from the Dutch grid](https://www.nu.nl/klimaat/6208030/ministerie-greep-in-om-chinees-bedrijf-uit-nederlands-stroomnet-te-houden.html)
