update casefile with trello information

--- a/_cases/DIVD-2022-00008.md
+++ b/_cases/DIVD-2022-00008.md
@@ -43,7 +43,7 @@ timeline:
   event:  DIVD started scanning for vulnerable Zimbra email servers
 - start: 2022-02-06
   end:
-  event:  DIVD created a first list of vulnerable Zimbra email servers.
+  event:  DIVD created a first list of vulnerable Zimbra email servers. 31132 vulnerable instances found
 - start: 2022-02-07
   end:
   event:  First version of this case file.
@@ -56,6 +56,15 @@ timeline:
 - start: 2022-02-08
   end:
   event: DIVD shared data about the NL Space with the Dutch Digital Trust Center.
+- start: 2022-02-14
+  end:
+  event: DIVD sent out a second batch of notifications for 24379 vulnerable instances.
+- start: 2022-03-14
+  end:
+  event: Third scan with 22600 potential vulnerable hosts found. Fingerprint is no longer reliable, no mailrun done.
+- start: 2022-04-20
+  end:
+  event: Case closed
 ---
 ## Summary
 
