--- a/_cases/DIVD-2022-00009.md
+++ b/_cases/DIVD-2022-00009.md
@@ -93,7 +93,7 @@ This backend and the Super Administrator account give the ability to:
 * Uploading of firmware to devices
 * Creation and deletion of customers
 
-In the SolarMan platform, there are over 1,000,000 plants (installations) with a total power of over 10GwP (actually generated). Most systems are located in China and Australia, but a significant number of 40k+ in The Netherlands.
+In the SolarMan platform, there are almost 1,000,000 plants (installations) with a total power of over 10GwP (actually generated). Most systems are located in China and Australia, but a significant number of 40k+ in The Netherlands.
 
 In the second half of April 2021, SolarMan gets notified and changes the password. On 3 Feb 2022, Jelle reads [Jan van Kampen's blogpost on Growatt](https://janvankampen.nl/?p=516) and decides to check the password again. To his horror, the password has been changed back to the password in the GitHub repo.
 
