--- a/_cases/DIVD-2022-00025.md
+++ b/_cases/DIVD-2022-00025.md
@@ -39,6 +39,9 @@ timeline:
 - start: 2022-06-24
   end:
   event: Third batch of notifications sent
+- start: 2022-07-28
+  end:
+  event: Fourth batch of notifications sent
 
 ---
 ## Summary
