Make sure this doesn;t count in the stats

--- a/_cases/DIVD-2022-00009.md
+++ b/_cases/DIVD-2022-00009.md
@@ -65,7 +65,7 @@ timeline:
 - start: 2022-07-03
   end:   
   event: "NCSC reports that the Dutch ambassador has sent a formal letter to China Cert who confirmed receipt of the data"
-ips: 0 
+ips: n/a
 # You can set IPs to n/a when this case isn't about IPs (e.g. stolen credentials)
 #
 # The lines below redirect all the CVE references to our site
