Updates on the Solarman case

--- a/_cases/DIVD-2022-00009.md
+++ b/_cases/DIVD-2022-00009.md
@@ -65,6 +65,10 @@ timeline:
 - start: 2022-07-03
   end:   
   event: "NCSC reports that the Dutch ambassador has sent a formal letter to China Cert who confirmed receipt of the data"
+- start: 2022-07-24
+  event: Findings presented at MCH2022
+- start: 2022-07-24
+  event: Vendor responded
 ips: 0 
 # You can set IPs to n/a when this case isn't about IPs (e.g. stolen credentials)
 #
@@ -102,6 +106,39 @@ On 4 Feb Jelle joins DIVD and on 6 Feb we opened this case.
 Getting the account closed turned out to be hard. The first time the vendor responded promptly, but silently. In fact, neither we nor the NCSC-NL ever got any reply from them. NCSC-NL used the help of the Dutch Embassy in China and head of research Victor Gevers visited the Chinese Embassy in The Hague, all in an effort to get into contact. In the end, the password has been changed and the repository deleted. Just before this Cert China confirmed receipt of the report to NCSC-NL.
 
 The net effect of deleting the repository and resetting the password is that the number of parties with the ability to abuse this access has been reduced from "everybody that was able to find the password on GitHub" to the vendor and whoever can control the vendor.
+
+On 24 Jul 2022 we presented out findings at the [MCH2022](https://www.mch2022.org) hackers camp. You can [watch the presentation](https://media.ccc.de/v/mch2022-350-iot-international-outage-technology-disclosure-of-divd-2022-00009-#t=6) online or below.
+
+
+The vendor responded to our disclosure right before we got on stage:
+```
+Dear Frank,
+
+This is Wei and I am responsible for marketing department, thanks for your reply and thanks anyway for 
+Dutch ethical hacker finding a issue for us. 
+
+At present we're absolutely off the court with the upcoming disclosure and communicating time left to 
+us is extremely limited. 
+For now, I can only say: 
+
+Firstly, the account is subjected to testing group and NOT a super Admin account, which later we can 
+provide proof in details;
+Secondly, uploading firmware via the account is fine but no actual control function is workable as real 
+operation needs a further verification and subjected to authorization from inverter manufacutrers；
+Thirdly, the account is not related to any account of other customers and won't affect their PV plants;
+At last, the account is now in safe condition.
+
+Therefore, we believe there is no effect to PV plant operating in the system. 
+
+In case you wanna go to public with the case, please do keep above facts in your statement. 
+And we expect not to mention the product name in disclosure and don't expect any exaggration before 
+clarification.. 
+
+Personally I think we can create a long term cooperation with your organization to offer serivce to our 
+customer in much more secure way
+```
+
+We are currently in contact witht he vendor.
 
 ## What you can do
 
