--- a/_cases/2022/DIVD-2022-00014.md
+++ b/_cases/2022/DIVD-2022-00014.md
@@ -30,7 +30,7 @@ timeline:
   end:
   event: "First notifications sent"
 - start: 2022-07-31
-  event: Lat update to the GreyNoise Ukraine only list
+  event: Last update to the GreyNoise Ukraine only list
 - start: 2022-08-15
   event: Case closed
 ips: 5689 
