Forgot to acutually close the case

--- a/_cases/2022/DIVD-2022-00014.md
+++ b/_cases/2022/DIVD-2022-00014.md
@@ -16,7 +16,7 @@ researchers:
 recommendation: "We explicitly leave it up to the network administrators to decide what to do with the observed facts"
 #patch_status: n/a
 #-workaround: n/a
-status : Open
+status : Closed
 start: 2022-03-04
 end:   2022-08-15
 timeline:
