Updated Timeline for DIVD-2022-00038

--- a/_cases/2022/DIVD-2022-00038.md
+++ b/_cases/2022/DIVD-2022-00038.md
@@ -23,6 +23,9 @@ timeline:
 - start: 2022-07-03
   end:
   event: First round of notifications sent to about 300 hosts
+- start: 2022-08-31
+  end:
+  event: Second round of notifications sent to about 165 hosts
 ips: 295
 
 ---
