--- a/_cases/2022/DIVD-2022-00048.md
+++ b/_cases/2022/DIVD-2022-00048.md
@@ -1,7 +1,7 @@
 ---
 layout: case
 title: "Dossier Energy Transition"
-excerpt: "In this dassier we are tracking cases and other findings related to the global energy transition"
+excerpt: "In this dossier we are tracking cases and other findings related to the global energy transition"
 author: Frank Breedijk
 lead: Frank Breedijk
 status: Open
