[DIVD-2022-0014] Wrap up the gitlab case

--- a/_cases/2022/DIVD-2022-00015.md
+++ b/_cases/2022/DIVD-2022-00015.md
@@ -4,7 +4,7 @@ title: "Unauthenticated user enumeration on GraphQL API"
 excerpt: "CVE-2021-4191: GitLab GraphQL API User Enumeration"
 author: Mick Beer
 lead: Martin van Wingerden
-status: Open
+status: Closed
 researchers:
 - Mick Beer
 - Martin van Wingerden
@@ -14,7 +14,7 @@ versions: Versions starting from 13.0 and up to 14.8.2, 14.7.4, and 14.6.5
 recommendation: "Patches are available from the vendor."
 workaround: disable public profiles
 start: 2022-03-04
-end:
+end: 2022-08-31
 timeline:
 - start: 2022-02-25
   end:
@@ -23,11 +23,24 @@ timeline:
   end:
   event:  "DIVD starts OSINT research."
 - start: 2022-03-04
-  end:
-  event: "DIVD starts scanning the internet for vulnerable GitLab instances."
+  end: 2022-08-31
+  event: "DIVD scans the internet for vulnerable GitLab instances."
 - start: 2022-03-05
-  end:
-  event:  DIVD starts with identifying owners.
+  end: 
+  event:  DIVD starts identifying the owners.
+- start: 2022-03-07
+  end: 
+  event:  DIVD sends out the first notification to abuse mailboxes.
+- start: 2022-03-24
+  end: 
+  event:  DIVD sends out the second notification to abuse mailboxes.
+- start: 2022-04-27
+  end: 
+  event:  DIVD sends out the third notification to abuse mailboxes.
+- start: 2022-07-01
+  end: 
+  event:  DIVD sends out a final notification to abuse mailboxes.
+ips: 14220
 ---
 ## Summary
 
