Process review comments

--- a/_cases/2022/DIVD-2022-00053.md
+++ b/_cases/2022/DIVD-2022-00053.md
@@ -1,20 +1,19 @@
 ---
 layout: case
-title: DIVD-2022-00053 - H2 Web Console - CVE-2021-42392, CVE-2022-23221
-divd: DIVD-2022-00053
+title: H2 Web Console - CVE-2021-42392, CVE-2022-23221
 author: Martin van Wingerden
 lead: Martin van Wingerden
-redirect_from:
-- /DIVD-2022-00053/
 status: Open
 excerpt: DIVD is researching vulnerable publicly exposed H2 Consoles
 researchers:
 - Martin van Wingerden
-cves: CVE-2021-42392, CVE-2022-23221
+cves: 
+- CVE-2021-42392
+- CVE-2022-23221
 product: H2 Web Console
 versions: 1.1.100-2.0.204
 recommendation: "Update and do not expose the console to untrusted users."
--workaround: n/a
+workaround: Do not expose the console to untrusted users.
 start: 2022-09-09
 end:
 timeline:
@@ -36,13 +35,13 @@ Users with this vulnerable versions should up data as fast as possible. And H2 C
 
 ## What we are doing
 
-We are scanning the internet for vulnerable GitLab servers, and will notify system owners via the listed abuse contacts.
+We are scanning the internet for vulnerable H2 Console servers, and will notify system owners via the listed abuse contacts.
 
 {% include timeline.html %}
 
 ## More information
-* [CVE-2022-23221](https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2022-23221)
+* {% cve CVE-2022-23221 %}
 * [H2 Database Console Remote Code Execution](https://packetstormsecurity.com/files/165676/H2-Database-Console-Remote-Code-Execution.html)
-* [CVE-2021-42392](https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2021-42392)
+* {% cve CVE-2021-42392 %}
 * [The JNDI Strikes Back – Unauthenticated RCE in H2 Database Console](https://jfrog.com/blog/the-jndi-strikes-back-unauthenticated-rce-in-h2-database-console/)
 
