--- a/_cases/2022/DIVD-2022-00051.md
+++ b/_cases/2022/DIVD-2022-00051.md
@@ -4,20 +4,21 @@ title: H2 Web Console - CVE-2021-42392, CVE-2022-23221
 author: Martin van Wingerden
 lead: Martin van Wingerden
 status: Open
-excerpt: DIVD is researching vulnerable publicly exposed H2 Consoles
+excerpt: DIVD is researching vulnerable accessible H2 Web Console instances
 researchers:
 - Martin van Wingerden
 - Steven Sparks
-cves: 
+- Pepijn van der Stap
+  cves:
 - CVE-2021-42392
 - CVE-2022-23221
-product: H2 Web Console
-versions: 1.1.100-2.1.210
-recommendation: "Update and do not expose the console to untrusted users."
-workaround: Do not expose the console to untrusted users.
-start: 2022-09-09
-end:
-timeline:
+  product: H2 Web Console
+  versions: 1.1.100-2.1.210
+  recommendation: "Update and do not expose the console to untrusted users."
+  workaround: Do not expose the console to untrusted users.
+  start: 2022-09-09
+  end:
+  timeline:
 - start: 2022-01-04
   end:
   event: "H2 released version 2.0.206 and reported about CVE-2021-42392"
@@ -26,16 +27,22 @@ timeline:
   event: "H2 released version 2.1.210 and reported about CVE-2022-23221"
 - start: 2022-09-09
   end:
-  event:  DIVD starts scanning for vulnerabilities.
+  event: DIVD starts scanning for vulnerabilities.
 ---
 
 ## Summary
 
 On January 5 H2 published an advisory about CVE-2021-42392 and released a new version.
 
+Exploitation likeability is high, because the exploit is trivial as the exploit code is readily available.
+
 ## What you can do
 
-Users with this vulnerable versions should up data as fast as possible. And H2 Console should never be made available to untrusted users.
+Users with this vulnerable versions should up data as fast as possible. H2 Console should never be made available to untrusted users.
+
+We recommend ACLs to limit access to the console to trusted users, an practical example would be to only allow access to the console from the local/virtual network your infrastructure is running on.
+
+General advice after following up our recommendation is to disable access to the console by setting the `webAllowOthers` property to `false` in the `h2.properties` file in case you have not already done so.
 
 ## What we are doing
 
