--- a/_cases/2022/DIVD-2022-00051.md
+++ b/_cases/2022/DIVD-2022-00051.md
@@ -27,7 +27,7 @@ timeline:
   event: "H2 released version 2.1.210 and reported about CVE-2022-23221"
 - start: 2022-09-09
   end:
-  event:  DIVD starts scanning for vulnerabilities.
+  event: "DIVD starts scanning for vulnerabilities."
 ---
 
 ## Summary
@@ -38,7 +38,7 @@ Exploitation likeability is high, because the exploit is trivial as the exploit 
 
 ## What you can do
 
-Users with this vulnerable versions should up data as fast as possible. H2 Console should never be made available to untrusted users.
+Users with this vulnerable versions should update as fast as possible. H2 Console should never be made available to untrusted users.
 
 We recommend ACLs to limit access to the console to trusted users, an practical example would be to only allow access to the console from the local/virtual network your infrastructure is running on.
 
