--- a/_cases/2022/DIVD-2022-00051.md
+++ b/_cases/2022/DIVD-2022-00051.md
@@ -34,7 +34,7 @@ timeline:
 
 On January 5 H2 published an advisory about CVE-2021-42392 and released a new version.
 
-Exploitation likeability is high, because the exploit is trivial as the exploit code is readily available.
+Exploitation likeability is high, as the exploit code is readily available.
 
 ## What you can do
 
