--- a/_cases/2022/DIVD-2022-00032.md
+++ b/_cases/2022/DIVD-2022-00032.md
@@ -35,6 +35,9 @@ timeline:
 - start: 2022-06-21
   end:
   event: "Second round of notifications sent"
+- start: 2022-09-18
+  end:
+  event: "Third round of notifications sent"
 
 ips: 0
 # You can set IPs to n/a when this case isn't about IPs (e.g. stolen credentials)
